crates/reap-order/tests/ui/regular_authority_token_fields_are_private.stderr
error: pattern requires `..` due to inaccessible fields
  --> tests/ui/regular_authority_token_fields_are_private.rs:7:9
   |
 7 |       let ApprovedRegularSubmit {
   |  _________^
 8 | |         account_id: _,
 9 | |         order: _,
10 | |         canonical_numbers: _,
11 | |         origin: _,
12 | |     } = submit;
   | |_____^
   |
help: ignore the inaccessible and unused fields
   |
11 |         origin: _, ..,
   |                  ++++

error: pattern requires `..` due to inaccessible fields
  --> tests/ui/regular_authority_token_fields_are_private.rs:13:9
   |
13 |       let ApprovedRegularCancel {
   |  _________^
14 | |         account_id: _,
15 | |         symbol: _,
16 | |         client_order_id: _,
17 | |         reason: _,
18 | |     } = cancel;
   | |_____^
   |
help: ignore the inaccessible and unused fields
   |
17 |         reason: _, ..,
   |                  ++++

error: pattern requires `..` due to inaccessible fields
  --> tests/ui/regular_authority_token_fields_are_private.rs:22:9
   |
22 |       let PreparedRegularSubmit {
   |  _________^
23 | |         account_id: _,
24 | |         idempotency_key: _,
25 | |         client_order_id: _,
...  |
28 | |         trade_mode: _,
29 | |     } = submit;
   | |_____^
   |
help: ignore the inaccessible and unused fields
   |
28 |         trade_mode: _, ..,
   |                      ++++

error: pattern requires `..` due to inaccessible fields
  --> tests/ui/regular_authority_token_fields_are_private.rs:30:9
   |
30 |       let PreparedRegularCancel {
   |  _________^
31 | |         account_id: _,
32 | |         symbol: _,
33 | |         client_order_id: _,
34 | |         reason: _,
35 | |     } = cancel;
   | |_____^
   |
help: ignore the inaccessible and unused fields
   |
34 |         reason: _, ..,
   |                  ++++

error: pattern requires `..` due to inaccessible fields
  --> tests/ui/regular_authority_token_fields_are_private.rs:39:9
   |
39 |       let ReservedRegularSubmit {
   |  _________^
40 | |         account_id: _,
41 | |         client_order_id: _,
42 | |         order: _,
43 | |         canonical_numbers: _,
44 | |     } = reserved;
   | |_____^
   |
help: ignore the inaccessible and unused fields
   |
43 |         canonical_numbers: _, ..,
   |                             ++++
